--- a/about-page.html
+++ b/about-page.html
@@ -44,7 +44,7 @@
           do when it comes to coding. I've been studying web development for 6 months and I can now literally make a
           responsive website, web design, and a little programming. I'd like to learn more about what is related to web
           development. I am currently broadening my knowledge of Javascript, jQuery, Reactjs, and other web development
-          topics. I my mind I may not be the best asset for your company. But I know I can make myself enough
+          topics. In my mind I may not be the best asset for your company. But I know I can make myself enough
           employee at work.
         </div>
       </div>
